src/app/project/project.component.scss
@import "~assets/styles/base/base.scss";

:host {
  @include flex(1 1 auto);
  display: block;
  background: $bg-default;
}

@media (min-width: 768px) {
  :host {
    padding-top: .2rem;
  }
}

.banner {
  background-color: #003366;
  color: white;
}

.project {
  background: #fff;

  .container {
    @media (max-width: 767px) {
      padding: 1rem;
    }
  }

  .hero-banner-alt {
    h1 {
      display: inline-block;
    }
    .desc {
      margin: 0 0 30px;
    }
    .proj-status {
      display: inline-block;
      font-size: 1.2rem;
      font-weight: 700;
      margin: 0 0 8px 10px;
      color: #fcba18;
      text-transform: uppercase;
    }
    .ea-decision {
      color: #fcba18;
      font-size: 1rem;
      border: 2px solid #fcba18;
      padding: 3px 10px;
      font-weight: bold;
      display: inline-block;
      margin-bottom: 45px;
    }
    .basic-info {
      @media (min-width: 767px) {
        display: flex;
      }

      > div {
        padding: 0px 15px 0 0;
        margin-right: 15px;
        @media (min-width: 767px) {
          border-right: 1px solid #46617b;
        }
        &:last-of-type {
          border-right: none;
        }
      }
      label {
        font-weight: bold;
        color: #fcba18;
        font-size: 1rem;
      }
      p {
        font-size: 1rem;
        display: inline-block;
      }
    }
    .legislation-button {
        margin-top: 20px;
        label {
            font-weight: bold;
            color: #fcba18;
            font-size: 1rem;
        }
        p {
            font-size: 1rem;
            display: inline-block;
        }
    }
  }

  main {
    font-size: .9rem;

    section {
      word-wrap: break-word;
      padding: 1rem 0;

      .row {
        margin-right: -16px;
        margin-left: -16px;
        @media (max-width: 767px) {
          display: block;
          font-size: 1rem;
          .value,
          p {
            font-size: 1rem;
          }
          .col-6 {
            max-width: 100%;
            margin-bottom: 12px;
          }
        }
      }
    }
    .proj-status,
    .shape-id {
      font-size: 1.2rem;
      font-weight: bold;
      color: $primary;
      margin-bottom: 5px;
    }
    .col-6 {
      margin-bottom: 2px;
    }
    label {
      font-weight: bold;
      color: $primary;
      margin-bottom: 0;
      line-height: 1.2;
    }
    .value {
      font-size: .8rem;
      line-height: 1.25;
      margin-bottom: 5px;
    }
    .organization-item {
      margin-top: 0;
      color: #fff;
      background-color: #38598a;
      border-radius: 4px 4px 0 0;
      padding: 7px 10px;
      width: 100%;
      text-align: center;
      p {
        font-size: 1.2rem;
        font-weight: bold;
        margin-bottom: 0;
      }
    }
    .project-item {
      &__commenting {
        background-color: #ddd;
        margin-bottom: 8px;
        padding: 7px 1rem;
      }
    }
    .location-info {
      @media (min-width: 991px) {
        position: absolute;
        right: 0;
        top: 50%;
        transform: translateY(-50%);
        width: 550px;
      }
      border: 2px solid #003365;
      padding: 35px 40px 40px;
      h2 {
        background: #fff;
        color: #003364;
        @media (min-width: 991px) {
          padding: 0 8px;
          position: absolute;
          top: -25px;
          left: 30px;
        }
      }
      label,
      p {
        font-size: 1rem;
      }
    }

    .shape-info-item {
      hr {
          margin: 1rem 0;
      }
    }
    .nav-tabs {
      background: none;
    }
    .project-tabs {
      background: #f7f8fa;
    }
    .nav-tabs .nav-link.active {
      background: #f7f8fa;
    }
  }

  aside {
    display: flex;
    flex-direction: column;
    margin-top: 0;
    button {
      margin-bottom: 1rem;
    }
    >section {
      position: relative;
      background-color: #fff;
      padding: 1rem;
      border-radius: 5px;
      min-height: 20rem;
      box-shadow: 0.1rem 0.1rem 0.5rem rgba(0, 0, 0, 0.15);

      ul.nav-tabs {
        margin-bottom: 1.5rem;
      }
    }
  }
  section.people {
    background: #3f668c;
    color: white;

    a {
      color: #FCBA19;
    }

    h3 {
      margin-bottom: .5rem;
      letter-spacing: -.02rem;
      font-size: 1rem;
      font-weight: 700;
    }
    p {
      font-size: 1rem;
      i {
        vertical-align: bottom;
      }
    }
    .flex-container {
      @media (min-width: 991px) {
        display: flex;
        .inner-col {
          flex: 32%;
        }
      }
    }
  }
}

// :after {
//   content: '';
//   width: 100%;
//   top: 0;
//   right: 0;
//   height: 100%;
//   background: #136bc378;
//   z-index: 999;
// }

@media (max-width: 991px) {
  .project {
    main {
      margin-bottom: 1rem;
    }
  }
}

